# c_cpp_developer_dio

./: README.md
gcalc/: CMakeLists.txt
gcalc/app/: CMakeLists.txt
gcalc/app/src/: main.c  signals_callbacks.c
gcalc/module/: CMakeLists.txt
gcalc/module/calc_manager/: CMakeLists.txt
gcalc/module/calc_manager/include/: calc_manager.h
gcalc/module/calc_manager/src/: calc_manager.c
gcalc/view/: CMakeLists.txt
gcalc/view/include/: user_interface.h
gcalc/view/model/: main_window.glade
gcalc/view/src/: user_interface.c
gcalc/view/static/: button_equals_style.css  entry_expression_style.css
